--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="(grid$ | async) as grid" class="grid-wrapper">
-  <div *ngFor="let line of grid.cells" class="grid-line">
+  <div *ngFor="let line of grid.cells; let i = index" class="grid-line">
+    <span>{{i}}</span>
     <div
       *ngFor="let cell of line"
       [class.grid-line__cell_food]="cell.is_food"
